--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<progress.drwang.tbprogressbaar.view.TBProgressView
+<progress.drwang.tbprogressbar.view.TBProgressView
     android:layout_width="match_parent"
     android:id="@+id/tbpv"
     android:padding="20dp"
